--- a/moodflow/pubspec.yaml
+++ b/moodflow/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_local_notifications: ^19.4.0
   permission_handler: ^12.0.1
   timezone: ^0.10.1
+  http: ^1.1.0
+  crypto: ^3.0.3
+  flutter_dotenv: ^5.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -60,6 +63,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - .env
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
