--- a/moodflow/pubspec.yaml
+++ b/moodflow/pubspec.yaml
@@ -25,15 +25,18 @@ dependencies:
   crypto: ^3.0.3
   cupertino_icons: ^1.0.8
 
-  # New backup and export dependencies
-  google_sign_in: ^6.2.0
+  # Updated backup and export dependencies
+  google_sign_in: ^6.2.1
   googleapis: ^13.2.0
   googleapis_auth: ^1.6.0
-  path_provider: ^2.1.2
+  path_provider: ^2.1.3
   pdf: ^3.11.1
   csv: ^6.0.0
   file_picker: ^8.0.0+1
   share_plus: ^9.0.0
+  
+  # iCloud support (iOS only)
+  icloud_storage: ^2.1.0
 
 dev_dependencies:
   flutter_test:
