Fixing backup/import/export W.I.P.

--- a/moodflow/ios/Runner/Info.plist
+++ b/moodflow/ios/Runner/Info.plist
@@ -52,5 +52,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+    <key>NSDocumentsFolderUsageDescription</key>
+    <string>This app needs access to documents for backup functionality</string>
 </dict>
 </plist>
