--- a/moodflow/pubspec.yaml
+++ b/moodflow/pubspec.yaml
@@ -15,27 +15,35 @@ dependencies:
   flutter:
     sdk: flutter
   
-  # Existing dependencies
+  # Core dependencies
   shared_preferences: ^2.2.2
   intl: ^0.20.2
+  cupertino_icons: ^1.0.8
+
+  # Notification dependencies
   flutter_local_notifications: ^19.4.0
   permission_handler: ^12.0.1
   timezone: ^0.10.1
+
+  # Network and API dependencies
   http: ^1.1.0
   crypto: ^3.0.3
-  cupertino_icons: ^1.0.8
 
-  # Updated backup and export dependencies
+  # File handling and storage dependencies
+  path_provider: ^2.1.3
+  file_picker: ^8.0.0+1
+
+  # Export dependencies
+  pdf: ^3.11.1
+  csv: ^6.0.0
+  share_plus: ^9.0.0
+
+  # Cloud backup dependencies
   google_sign_in: ^6.2.1
   googleapis: ^13.2.0
   googleapis_auth: ^1.6.0
-  path_provider: ^2.1.3
-  pdf: ^3.11.1
-  csv: ^6.0.0
-  file_picker: ^8.0.0+1
-  share_plus: ^9.0.0
   
-  # iCloud support (iOS only)
+  # iCloud support (iOS only) - Note: This package may have platform restrictions
   icloud_storage: ^2.1.0
 
 dev_dependencies:
