--- a/moodflow/android/app/src/main/AndroidManifest.xml
+++ b/moodflow/android/app/src/main/AndroidManifest.xml
@@ -12,9 +12,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:label="MoodFlow"
-        android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+            android:name="${applicationName}"
+            android:allowBackup="true"
+            android:dataExtractionRules="@xml/data_extraction_rules"
+            android:fullBackupContent="@xml/backup_rules"
+            android:exported="false"
+            android:icon="@mipmap/ic_launcher"
+            android:label="moodflow">
 
         <!-- Notification receivers -->
         <receiver android:exported="false" android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver">
