--- a/moodflow/pubspec.yaml
+++ b/moodflow/pubspec.yaml
@@ -1,4 +1,4 @@
-name: MoodFlow
+name: mood_flow
 description: "An easy way to track your moods, identify trends, and make goals!"
 publish_to: 'none'
 
