--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 name: Build Flutter App
 on:
   push:
-    branches: [ main, master ]  # Added master in case that's your default
-  workflow_dispatch:  # This allows manual triggering
+    branches: [ main, master ]
+  workflow_dispatch:
   pull_request:
     branches: [ main, master ]
 
@@ -16,7 +16,8 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: 'stable'
+        flutter-version: '3.24.0'
+        channel: 'stable'
         
     - name: Get dependencies
       run: flutter pub get
