--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,37 @@
 name: Build Flutter App
 on:
-  push:
-    branches: [ main, master ]
   workflow_dispatch:
-  pull_request:
-    branches: [ main, master ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
+    - uses: actions/checkout@v4
+    
+    - name: Setup Java
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'zulu'
+        java-version: '17'
+        
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.24.0'
+        flutter-version: '3.22.3'
         channel: 'stable'
+        cache: true
         
-    - name: Get dependencies
-      run: flutter pub get
+    - name: Navigate to Flutter project
+      run: cd moodflow
       
-    - name: Build APK
-      run: flutter build apk --debug
-      
+    - run: |
+        cd moodflow
+        flutter --version
+        flutter pub get
+        flutter build apk --debug
+    
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: debug-apk
-        path: build/app/outputs/flutter-apk/app-debug.apk
+        name: moodflow-debug
+        path: moodflow/build/app/outputs/flutter-apk/app-debug.apk  # Updated path
