--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,12 @@ jobs:
       uses: actions/setup-java@v4
       with:
         distribution: 'zulu'
-        java-version: '17'
+        java-version: '21'
         
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.24.5'
+        flutter-version: '3.27.1'
         channel: 'stable'
         cache: true
         
@@ -29,6 +29,7 @@ jobs:
     - run: |
         cd moodflow
         flutter --version
+        flutter clean
         flutter pub get
         flutter build apk --debug
     
