--- a/moodflow/pubspec.yaml
+++ b/moodflow/pubspec.yaml
@@ -9,7 +9,7 @@ issue_tracker: https://github.com/WedrownyElite/MoodFlow/issues
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.5.0 <4.0.0'  # Updated minimum SDK
 
 dependencies:
   flutter:
@@ -17,7 +17,7 @@ dependencies:
   
   # Core dependencies
   shared_preferences: ^2.2.2
-  intl: ^0.20.2
+  intl: ^0.19.0
   cupertino_icons: ^1.0.8
 
   # Notification dependencies
@@ -30,7 +30,7 @@ dependencies:
   crypto: ^3.0.3
   
   # Correlation dependencies + http
-  geolocator: ^12.0.0
+  geolocator: ^13.0.1  # Latest version
 
   # File handling and storage dependencies
   path_provider: ^2.1.4
