--- a/moodflow/pubspec.yaml
+++ b/moodflow/pubspec.yaml
@@ -16,8 +16,7 @@ dependencies:
     sdk: flutter
   
   # Home Screen Widget dependencies
-  home_widget: ^0.5.0  # For iOS/Android widgets
-  workmanager: ^0.5.2  # For background tasks
+  home_widget: ^0.6.0
   
   # Core dependencies
   shared_preferences: ^2.2.2
