--- a/moodflow/android/app/src/main/AndroidManifest.xml
+++ b/moodflow/android/app/src/main/AndroidManifest.xml
@@ -26,13 +26,15 @@
             android:restoreAnyVersion="true">
 
         <!-- Widget provider -->
-        <receiver android:name=".MoodFlowWidgetProvider"
-                  android:exported="true">
+        <receiver
+                android:name=".MoodFlowWidgetProvider"
+                android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
-            <meta-data android:name="android.appwidget.provider"
-                       android:resource="@xml/mood_widget_info" />
+            <meta-data
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/mood_widget_info" />
         </receiver>
         
         <!-- Notification receivers -->
